# mounts

./: CMakeLists.txt  config.h  db_utils.c  db_utils.h  memory_utils.c  memory_utils.h  mkpkg.sh  moumon-installpkg.sh  moumon-rmpkg.sh  mount-mon  mount-mon.c  mpd-utils.c  mpd-utils.h  space-mon.c  space-mon.h
docs/: ID3v1Tag.c  extract.c  id3.c  stats-ex.c
etc/ubuntuhome/.config/upstart/: moumon.conf
